--- a/unitykram.tests/unitykram.tests.csproj
+++ b/unitykram.tests/unitykram.tests.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
     <PackageReference Include="Unity" Version="5.8.11" />
+    <PackageReference Include="Unity.Interception" Version="5.5.5" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\unitykram\unitykram.csproj" />
