--- a/unitykram/unitykram.csproj
+++ b/unitykram/unitykram.csproj
@@ -4,5 +4,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Unity" Version="5.8.11" />
+    <PackageReference Include="Unity.Interception" Version="5.5.5" />
   </ItemGroup>
 </Project>
